--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
             <div class="welcome-header">
                 <i class="fas fa-laptop-code"></i>
                 <h1>Python MCQ Examination</h1>
-                <p>Test your Python knowledge with our comprehensive exam</p>
+                <p>Test your Python knowledge with this comprehensive exam</p>
             </div>
 
             <div class="card">
